[gd_scene load_steps=7 format=2]

[ext_resource path="res://Menus/MainMenu/PlayButton.png" type="Texture" id=1]
[ext_resource path="res://Menus/MainMenu/MenusMainMenu.gd" type="Script" id=2]
[ext_resource path="res://Menus/MainMenu/CreditsButton.png" type="Texture" id=3]
[ext_resource path="res://Menus/MainMenu/QuitButton.png" type="Texture" id=4]
[ext_resource path="res://Menus/MainMenu/SettingsButton.png" type="Texture" id=5]
[ext_resource path="res://Menus/Title.png" type="Texture" id=6]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="VBoxContainer"]
margin_right = 1920.0
margin_bottom = 287.0
texture = ExtResource( 6 )

[node name="PlayButton" type="TextureButton" parent="VBoxContainer"]
margin_top = 291.0
margin_right = 1920.0
margin_bottom = 371.0
texture_normal = ExtResource( 1 )

[node name="SettingsButton" type="TextureButton" parent="VBoxContainer"]
margin_top = 375.0
margin_right = 1920.0
margin_bottom = 455.0
texture_normal = ExtResource( 5 )

[node name="CreditsButton" type="TextureButton" parent="VBoxContainer"]
margin_top = 459.0
margin_right = 1920.0
margin_bottom = 539.0
texture_normal = ExtResource( 3 )

[node name="QuitButton" type="TextureButton" parent="VBoxContainer"]
margin_top = 543.0
margin_right = 1920.0
margin_bottom = 623.0
texture_normal = ExtResource( 4 )
[connection signal="pressed" from="VBoxContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="VBoxContainer/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/CreditsButton" to="." method="_on_CreditsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
